kuber/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alpo-blog-ingress
  namespace: monitoring
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: alpo.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alpo-blog-svc
            port:
              number: 80
